--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fm-nodejs",
   "version": "0.0.1",
   "description": "Awesome project from fm-2021-1",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,5 +22,9 @@
   "homepage": "https://github.com/freshcodeFT/fm-nodejs#readme",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   }
 }
