--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Awesome project from fm-2021-1",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development"
   },
   "repository": {
     "type": "git",
